tests/snapshots/parse_error_unexpected.expected
-- PARSE ERROR ---------------------------------------------

test.gn:1:12

I was expecting pattern but found Eof instead.

1 | let x = let
               ^
